# aioblackbird24180

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: dependabot-merge.yaml  release-drafter.yml  release.yml  test.yml
aioblackbird24180/: blackbird.py  http.py
examples/: basic_test.py
tests/aioblackbird24180/: __init__.py  conftest.py  test_http.py  test_init.py  test_util.py
tests/fixtures/: http_request.txt  http_response.txt  http_response_body.txt  parsed_response.json  status_response.txt
